--- a/src/program-rust/Cargo.toml
+++ b/src/program-rust/Cargo.toml
@@ -15,7 +15,10 @@ no-entrypoint = []
 [dependencies]
 borsh = "0.9.3"
 borsh-derive = "0.9.1"
+num-traits = "0.2"
+num-derive = "0.3.3"
 solana-program = "~1.10.35"
+thiserror = "1.0.29"
 
 [dev-dependencies]
 solana-program-test = "~1.10.35"
